--- a/dirwatcher/packages.config
+++ b/dirwatcher/packages.config
@@ -1,14 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net451" />
-  <package id="ReactiveFileSystemWatcher" version="0.1.2.1" targetFramework="net45" />
-  <package id="reactiveui" version="6.5.2" targetFramework="net451" />
-  <package id="reactiveui-core" version="6.5.2" targetFramework="net451" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
-  <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
-  <package id="Splat" version="1.6.2" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net451" />
+  <package id="ReactiveFileSystemWatcher" version="0.1.2.1" targetFramework="net451" />
+  <package id="reactiveui" version="7.4.0" targetFramework="net451" />
+  <package id="reactiveui-core" version="7.4.0" targetFramework="net451" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net451" />
+  <package id="Rx-XAML" version="2.2.5" targetFramework="net451" />
+  <package id="Splat" version="1.4.0" targetFramework="net451" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net451" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net451" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net451" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net451" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net451" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net451" />
 </packages>
